--- a/PrototypeB.html
+++ b/PrototypeB.html
@@ -54,7 +54,9 @@
                 </tr>
                 <tr>
                     <td>First Year</td>
-                    <td onclick="onClickDud();">25</td>
+                    <td class="popup" onclick="onClickDud();">25
+                        <span class="popuptext" id="myPopup">A Simple Popup!</span>
+                    </td>
                     <td onclick="onClickDud();">-</td>
                 </tr>
                 <tr>
@@ -117,7 +119,7 @@
         <div class="w3-container" id="designers" style="margin-top:75px;">
             <h1 class="w3-xxxlarge w3-text-red"><b>Help</b></h1>
             <hr style="width:50px;border:5px solid red" class="w3-round">
-            <p>Submit a contact form to your advisor or chat with our state of the art chatbot to answer any APSC degree
+            <p>Submit a contact form to your advisor or chat with our state of the art EZbot to answer any APSC degree
                 planning needs.</p>
             <p>
             <form onsubmit="formSubmit();">
@@ -146,13 +148,44 @@
                     Message</button>
             </form>
 
-            <div id="container" class="container">
+            <div id="container" class="container" style="display: none;">
                 <img src="https://cdn.pixabay.com/photo/2020/01/02/16/38/chatbot-4736275_960_720.png" height="400vh"
                     alt="Chatbot clipart">
                 <div id="chat" class="chat">
                     <div id="messages" class="messages"></div>
                     <input id="input" type="text" placeholder="Write something..." autocomplete="off"
                         autofocus="true" />
+                </div>
+            </div>
+
+            <div class="chatbot chatbot--closed">
+                <div class="chatbot__header">
+                    <p><strong>Got a question?</strong> <span class="u-text-highlight">Ask EZbot</span></p>
+                    <svg class="chatbot__close-button icon-speech" viewBox="0 0 32 32">
+                        <use xlink:href="#icon-speech" />
+                    </svg>
+                    <svg class="chatbot__close-button icon-close" viewBox="0 0 32 32">
+                        <use xlink:href="#icon-close" />
+                    </svg>
+                </div>
+                <div class="chatbot__message-window">
+                    <ul class="chatbot__messages">
+                        <li class="is-ai animation">
+                            <div class="is-ai__profile-picture">
+                                <img src="./assets/g.svg" style="height: 60px; width: 60px;" />
+                            </div>
+                            <span class="chatbot__arrow chatbot__arrow--left"></span>
+                            <p class='chatbot__message'>Hi there 🖐. I’m EZbot, your virtual assistant. I'm here to help
+                                with your APSC degree related enquiries.</p>
+                        </li>
+                        <!-- Answer and response added here -->
+                    </ul>
+                </div>
+                <div class="chatbot__entry chatbot--closed">
+                    <input type="text" class="chatbot__input" placeholder="Write a message..." />
+                    <svg class="chatbot__submit" viewBox="0 0 32 32">
+                        <use xlink:href="#icon-send" />
+                    </svg>
                 </div>
             </div>
             </p>
@@ -184,7 +217,8 @@
         }
 
         function onClickDud() {
-            console.log("dud");
+            var popup = document.getElementById("myPopup");
+            popup.classList.toggle("show");
         }
 
         // Chatbot code
@@ -299,6 +333,232 @@
             }, 2000);
         }
 
+        const accessToken = '3796899bd37c423bad3a21a25277bce0'
+        const baseUrl = 'https://api.api.ai/api/query?v=2015091001'
+        const sessionId = '20150910';
+        const loader = `<span class='loader'><span class='loader__dot'></span><span class='loader__dot'></span><span class='loader__dot'></span></span>`
+        const errorMessage = 'My apologies, I\'m not available at the moment, however, feel free to call our support team directly 0123456789.'
+        const urlPattern = /(\b(https?|ftp):\/\/[-A-Z0-9+&@#\/%?=~_|!:,.;]*[-A-Z0-9+&@#\/%=~_|])/gim
+        const $document = document
+        const $chatbot = $document.querySelector('.chatbot')
+        const $chatbotMessageWindow = $document.querySelector('.chatbot__message-window')
+        const $chatbotHeader = $document.querySelector('.chatbot__header')
+        const $chatbotMessages = $document.querySelector('.chatbot__messages')
+        const $chatbotInput = $document.querySelector('.chatbot__input')
+        const $chatbotSubmit = $document.querySelector('.chatbot__submit')
+
+        const botLoadingDelay = 1000
+        const botReplyDelay = 2000
+
+        document.addEventListener('keypress', event => {
+            if (event.which == 13) validateMessage()
+        }, false)
+
+        $chatbotHeader.addEventListener('click', () => {
+            toggle($chatbot, 'chatbot--closed')
+            $chatbotInput.focus()
+        }, false)
+
+        $chatbotSubmit.addEventListener('click', () => {
+            validateMessage()
+        }, false)
+
+        const toggle = (element, klass) => {
+            const classes = element.className.match(/\S+/g) || [],
+                index = classes.indexOf(klass)
+            index >= 0 ? classes.splice(index, 1) : classes.push(klass)
+            element.className = classes.join(' ')
+        }
+
+        const userMessage = content => {
+            $chatbotMessages.innerHTML += `<li class='is-user animation'>
+      <p class='chatbot__message' style="color: #ffffff">
+        ${content}
+      </p>
+      <span class='chatbot__arrow chatbot__arrow--right'></span>
+    </li>`
+        }
+
+        const aiMessage = (content, isLoading = false, delay = 0) => {
+            setTimeout(() => {
+                removeLoader()
+                $chatbotMessages.innerHTML += `<li 
+      class='is-ai animation' 
+      id='${isLoading ? "is-loading" : ""}'>
+        <div class="is-ai__profile-picture">
+            <img src="./assets/g.svg" style="height: 60px; width: 60px;"/>
+        </div>
+        <span class='chatbot__arrow chatbot__arrow--left'></span>
+        <div class='chatbot__message'>${content}</div>
+      </li>`
+                scrollDown()
+            }, delay)
+        }
+
+        const removeLoader = () => {
+            let loadingElem = document.getElementById('is-loading')
+            if (loadingElem) $chatbotMessages.removeChild(loadingElem)
+        }
+
+        const escapeScript = unsafe => {
+            const safeString = unsafe
+                .replace(/</g, ' ')
+                .replace(/>/g, ' ')
+                .replace(/&/g, ' ')
+                .replace(/"/g, ' ')
+                .replace(/\\/, ' ')
+                .replace(/\s+/g, ' ')
+            return safeString.trim()
+        }
+
+        const linkify = inputText => {
+            return inputText.replace(urlPattern, `<a href='$1' target='_blank'>$1</a>`)
+        }
+
+        const validateMessage = () => {
+            const text = $chatbotInput.value
+            const safeText = text ? escapeScript(text) : ''
+            if (safeText.length && safeText !== ' ') {
+                resetInputField()
+                userMessage(safeText)
+                send(safeText)
+            }
+            scrollDown()
+            return
+        }
+
+        const multiChoiceAnswer = text => {
+            const decodedText = text.replace(/zzz/g, "'")
+            userMessage(decodedText)
+            send(decodedText)
+            scrollDown()
+            return
+        }
+
+        const processResponse = val => {
+            if (val && val.fulfillment) {
+                let output = ''
+                let messagesLength = val.fulfillment.messages.length
+
+                for (let i = 0; i < messagesLength; i++) {
+                    let message = val.fulfillment.messages[i]
+                    let type = message.type
+
+                    switch (type) {
+                        // 0 fulfillment is text
+                        case 0:
+                            let parsedText = linkify(message.speech)
+                            output += `<p>${parsedText}</p>`
+                            break
+
+                        // 1 fulfillment is card
+                        case 1:
+                            let imageUrl = message.imageUrl
+                            let imageTitle = message.title
+                            let imageSubtitle = message.subtitle
+                            let button = message.buttons[0]
+
+                            if (!imageUrl && !button && !imageTitle && !imageSubtitle) break
+
+                            output += `
+            <a class='card' href='${button.postback}' target='_blank'>
+              <img src='${imageUrl}' alt='${imageTitle}' />
+            <div class='card-content'>
+              <h4 class='card-title'>${imageTitle}</h4>
+              <p class='card-title'>${imageSubtitle}</p>
+              <span class='card-button'>${button.text}</span>
+            </div>
+            </a>
+          `
+                            break
+
+                        // 2 fulfillment is a quick reply with multi-choice buttons
+                        case 2:
+                            let title = message.title
+                            let replies = message.replies
+                            let repliesLength = replies.length
+                            output += `<p>${title}</p>`
+
+                            for (let i = 0; i < repliesLength; i++) {
+                                let reply = replies[i]
+                                let encodedText = reply.replace(/'/g, 'zzz')
+                                output += `<button onclick='multiChoiceAnswer("${encodedText}")'>${reply}</button>`
+                            }
+                            break
+                    }
+                }
+
+                removeLoader()
+                return output
+            }
+
+            removeLoader()
+            return `<p>${errorMessage}</p>`
+        }
+
+        const setResponse = (val, delay = 0) => {
+            setTimeout(() => {
+                aiMessage(processResponse(val))
+            }, delay)
+        }
+
+        const resetInputField = () => {
+            $chatbotInput.value = ''
+        }
+
+        const scrollDown = () => {
+            const distanceToScroll =
+                $chatbotMessageWindow.scrollHeight -
+                ($chatbotMessages.lastChild.offsetHeight + 60)
+            $chatbotMessageWindow.scrollTop = distanceToScroll
+            return false
+        }
+
+        const send = (text = '') => {
+            fetch(`${baseUrl}&query=${text}&lang=en&sessionId=${sessionId}`, {
+                method: 'GET',
+                dataType: 'json',
+                headers: {
+                    Authorization: 'Bearer ' + accessToken,
+                    'Content-Type': 'application/json; charset=utf-8'
+                }
+            })
+                .then(response => response.json())
+                .then(res => {
+                    if (res.status < 200 || res.status >= 300) {
+                        let error = new Error(res.statusText)
+                        throw error
+                    }
+                    return res
+                })
+                .then(res => {
+                    setResponse(res.result, botLoadingDelay + botReplyDelay)
+                })
+                .catch(error => {
+                    setResponse(errorMessage, botLoadingDelay + botReplyDelay)
+                    resetInputField()
+                    console.log(error)
+                })
+
+            aiMessage(loader, true, botLoadingDelay)
+        }
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+            showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            if (n > x.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = x.length }
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex - 1].style.display = "block";
+        }
     </script>
 
 </body>
