--- a/DNScenario3.html
+++ b/DNScenario3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Dylan's Snowboard Trip Planner</title>
+    <title>Dylan's Ski & Snowboard Trip Planner</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -38,124 +38,96 @@
 
         <!-- Header -->
         <div class="w3-container" style="margin-top:80px" id="showcase">
-            <h1 class="w3-xxxlarge w3-text-blue"><b>Dylan's Advanced Snowboard Trip Requirement Report</b></h1>
+            <h1 class="w3-xxxlarge w3-text-blue"><b>Dylan's Ski & Snowboard Trip Requirement Report</b></h1>
             <hr style="width:50px;border:5px solid blue" class="w3-round">
             <table id="basic">
                 <tr>
                     <th style="width: 40%;">Basic Level</th>
                     <th>Complete</th>
-                    <th>Current Progress</th>
                     <th>Missing</th>
                     <th>Used Progress</th>
                 </tr>
                 <tr>
-                    <td><i>Basic Mountain Training</i> <br> (Any 2 from Avalanche prevention, weather prediction,
-                        wilderness
-                        survival)</td>
+                    <td><i>Basic Mountain Training</i> <br> (both Snow Safety, Avalanche Safety)</td>
                     <td id="firstYear">&#10004;</td>
                     <td></td>
-                    <td></td>
-                    <td>Basic Avalanche Prevention <br> Basic Wilderness Survival</td>
+                    <td>Snow Safety <br> Avalanche Safety</td>
                 </tr>
                 <tr>
-                    <td><i>Basic Snowboard Training</i> <br> (Both Snowboard Techniques and Snowboard Jumping) </td>
+                    <td><i>Basic Ski Training</i> <br> (Both Ski Knowledge and Ski Beginner) </td>
+                    <td id="firstYear"> &#10060;</td>
+                    <td>Ski Knowledge <br>Ski Beginner</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><i>Basic Snowboard Training</i> <br> (Both Snowboard Knowledge and Snowboard Beginner) </td>
                     <td id="firstYear"> &#10004;</td>
                     <td></td>
-                    <td></td>
-                    <td>Basic Snowboard Techniques <br> Basic Snowboard Jumping</td>
-                </tr>
-                <tr>
-                    <td><i>Basic Equipment</i> <br> (Parka, Toque, Face Mask, Snow Pants, Gloves)</td>
-                    <td id="firstYear">&#10004;</td>
-                    <td></td>
-                    <td></td>
-                    <td>Parka <br>
-                        Toque <br>
-                        Face Mask <br>
-                        Snow Pants <br>
-                        Gloves
-                    </td>
+                    <td>Snowboard Knowledge <br>Snowboard Beginner</td>
                 </tr>
             </table>
-            <hr>
+            <hr style="margin: 50px;">
 
             <table id="intermediate">
                 <tr>
                     <th style="width: 40%;">Intermediate Level</th>
                     <th>Complete</th>
-                    <th>Current Progress</th>
                     <th>Missing</th>
                     <th>Used Progress</th>
                 </tr>
                 <tr>
-                    <td><i>Intermediate Mountain Training</i> <br> (Any 2 from Avalanche prevention, weather prediction,
-                        wilderness
-                        survival)</td>
-                    <td>&#10004;</td>
-                    <td></td>
-                    <td></td>
-                    <td>Intermediate Avalanche Prevention <br> Intermediate Wilderness Survival</td>
+                    <td><i>Intermediate Mountain Training</i> <br> (both Tree Well Safety, Avalanche Survival)</td>
+                    <td>&#10060;</td>
+                    <td>Avalanche Survival</td>
+                    <td>Tree Well Safety</td>
                 </tr>
                 <tr>
-                    <td><i>Intermediate Snowboard Training</i> <br> Intermediate Snowboard Techniques </td>
+                    <td><i>Intermediate Ski Training</i> <br> Only Ski Intermediate </td>
+                    <td> &#10060;</td>
+                    <td>Ski Intermediate</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><i>Intermediate Snowboard Training</i> <br> Only Snowboard Intermediate </td>
                     <td> &#10004;</td>
                     <td></td>
-                    <td></td>
-                    <td>Intermediate Snowboard Techniques</td>
-                </tr>
-                <tr>
-                    <td><i>Intermediate Equipment</i> <br> (Parka, Toque, Face Mask, Snow Pants, Gloves)</td>
-                    <td>&#10004;</td>
-                    <td></td>
-                    <td></td>
-                    <td>Parka <br>
-                        Toque <br>
-                        Face Mask <br>
-                        Snow Pants <br>
-                        Gloves
-                    </td>
+                    <td>Snowboard Intermediate</td>
                 </tr>
             </table>
-            <hr>
+            <hr style="margin: 50px;">
             <table id="advanced">
                 <tr>
                     <th style="width: 40%;">Advanced Level</th>
                     <th>Complete</th>
-                    <th>Current Progress</th>
                     <th>Missing</th>
                     <th>Used Progress</th>
                 </tr>
                 <tr>
-                    <td><i>Advanced Mountain Training</i> <br> (Any 2 from Avalanche prevention, weather prediction,
-                        wilderness
-                        survival)</td>
-                    <td>&#10004;</td>
+                    <td><i>Advanced Mountain Training</i> <br> (One from Emergency Rescue)</td>
+                    <td>&#10060;</td>
+                    <td>Emergency Rescue</td>
                     <td></td>
-                    <td></td>
-                    <td>Advanced Avalanche Prevention <br> Advanced Wilderness Survival</td>
                 </tr>
                 <tr>
-                    <td><i>Advanced Snowboard Training</i> <br> Advanced Snowboard Techniques </td>
+                    <td><i>Advanced Ski Training</i> <br> Ski Advanced </td>
+                    <td> &#10060;</td>
+                    <td>Ski Advanced</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><i>Advanced Snowboard Training</i> <br> Snowboard Advanced </td>
                     <td> &#10004;</td>
-                    <td>Advanced Snowboard Techniques</td>
                     <td></td>
-                    <td></td>
+                    <td>Snowboard Advanced</td>
                 </tr>
                 <tr>
-                    <td><i>Advanced Equipment</i> <br> (Parka, Toque, Face Mask, Snow Pants, Gloves)</td>
-                    <td>&#10004;</td>
+                    <td><i>Combined Expert Class</i> <br> Combined Expert </td>
+                    <td> &#10060;</td>
+                    <td>Combined Expert</td>
                     <td></td>
-                    <td>
-                    </td>
-                    <td>
-                        Thick Snow Pants <br>
-                        Thick Parka <br>
-                        Gloves <br>
-                        Toque <br>
-                        Face Mask <br>
-                    </td>
                 </tr>
             </table>
+            <hr style="margin: 50px;">
         </div>
 
         <!-- End page content -->
